crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_derivation-5.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsTerminator>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsTerminator for TestInst {
    fn is_terminator(&self) -> bool {
        match self {
            Self::Terminate { .. } => true,
            Self::Constant { .. } => false,
            Self::PureOp { .. } => false,
        }
    }
}
