crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_derivation-7.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsPure>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsPure for TestInst {
    fn is_pure(&self) -> bool {
        match self {
            Self::Terminate { .. } => false,
            Self::Constant { .. } => false,
            Self::PureOp { .. } => true,
        }
    }
}
