crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_vec.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: check(input)
---
#[automatically_derived]
impl ::kirin_ir::Instruction for TestInst {
    fn is_terminator(&self) -> bool {
        match self {
            Self::OpA { .. } => false,
            Self::OpB { .. } => false,
        }
    }
    fn is_constant(&self) -> bool {
        match self {
            Self::OpA { .. } => false,
            Self::OpB { .. } => false,
        }
    }
    fn is_pure(&self) -> bool {
        match self {
            Self::OpA { .. } => false,
            Self::OpB { .. } => false,
        }
    }
    fn arguments(&self) -> impl Iterator<Item = &::kirin_ir::SSAValue> {
        match self {
            Self::OpA { args, .. } => args.iter(),
            _ => __KirinArgumentsIter {
                parent: self,
                index: 0,
            },
        }
    }
    fn results(&self) -> impl Iterator<Item = &::kirin_ir::ResultValue> {
        match self {
            Self::OpA { results, .. } => results.iter(),
            _ => __KirinResultsIter {
                parent: self,
                index: 0,
            },
        }
    }
    fn successors(&self) -> impl Iterator<Item = &::kirin_ir::Block> {
        __KirinSuccessorsIter {
            parent: self,
            index: 0,
        }
    }
    fn regions(&self) -> impl Iterator<Item = &::kirin_ir::Region> {
        __KirinRegionsIter {
            parent: self,
            index: 0,
        }
    }
}
#[automatically_derived]
pub struct __KirinArgumentsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinArgumentsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::OpA => {
                unreachable!("variant with container should not generate iterator");
            }
            TestInst::OpB { arg, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(arg)
                }
                _ => None,
            },
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinResultsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinResultsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::OpA => {
                unreachable!("variant with container should not generate iterator");
            }
            TestInst::OpB { result, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(result)
                }
                _ => None,
            },
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinSuccessorsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            _ => None,
        }
    }
}
#[automatically_derived]
pub struct __KirinRegionsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinRegionsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            _ => None,
        }
    }
}
