crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_wrapper-2.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveHasResults>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::HasResults for TestInst {
    fn results(&self) -> impl Iterator<Item = &::kirin_ir::ResultValue> {
        match self {
            Self::WrapA(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::HasResults>::results()
            }
            Self::WrapB(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::HasResults>::results()
            }
            _ => __KirinResultsIter {
                parent: self,
                index: 0,
            },
        }
    }
}
#[automatically_derived]
pub struct __KirinResultsIter<'__kirin_ir_iter_a> {
    parent: &'__kirin_ir_iter_a TestInst,
    index: usize,
}
#[automatically_derived]
impl<'__kirin_ir_iter_a> Iterator for __KirinResultsIter<'__kirin_ir_iter_a> {
    type Item = &'__kirin_ir_iter_a ::kirin_ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self.parent {
            TestInst::Regular { result, .. } => match self.index {
                0 => {
                    self.index += 1;
                    Some(result)
                }
                _ => None,
            },
            _ => None,
        }
    }
}
