crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_wrapper-5.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsTerminator>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsTerminator for TestInst {
    fn is_terminator(&self) -> bool {
        match self {
            Self::WrapA(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsTerminator>::is_terminator(
                    wrapped_instruction,
                )
            }
            Self::WrapB(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsTerminator>::is_terminator(
                    wrapped_instruction,
                )
            }
            Self::Regular { .. } => false,
        }
    }
}
