crates/kirin-derive-core/src/instruction/snapshots/kirin_derive_core__instruction__tests__enum_wrapper-6.snap
---
source: crates/kirin-derive-core/src/instruction/tests.rs
expression: "check::<DeriveIsConstant>(&input)"
---
#[automatically_derived]
impl ::kirin_ir::IsConstant for TestInst {
    fn is_constant(&self) -> bool {
        match self {
            Self::WrapA(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsConstant>::is_constant(wrapped_instruction)
            }
            Self::WrapB(wrapped_instruction) => {
                <wrapped_instruction as ::kirin_ir::IsConstant>::is_constant(wrapped_instruction)
            }
            Self::Regular { .. } => false,
        }
    }
}
